Rename and tighten existing skills to conform to best-practices
Renames api-design-backend to api-design and testing-strategy to
behavior-testing to match the descriptions' actual scope.

Tightens every existing SKILL.md against the checklist in
SKILLS_BEST_PRACTICES.md: prose sections become directive bullets or
decision tables, descriptions front-load the triggering keywords in the
user's vocabulary, and reference sections list fetchable URLs only.

AGENTS.md skill index and README skill table updated to the new names.